[tool.poetry]
authors = ["Ismael Mendoza <imendoza@umich.edu>"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "Blending ToolKit"
documentation = "https://BlendingToolKit.readthedocs.io"
homepage = "https://github.com/ismael-mendoza/BlendingToolKit"
license = "MIT"
name = "BlendingToolKit"
packages = [
  {include = "btk", from = "src"},
]
readme = "README.rst"
repository = "https://github.com/ismael-mendoza/BlendingToolKit"
version = "0.0.0"

[tool.poetry.urls]
Changelog = "https://github.com/ismael-mendoza/BlendingToolKit/releases"

[tool.poetry.dependencies]
astropy = "^2.0"
click = "^7.0"
galsim = "^2.2.4"
numpy = "^1.12"
python = "^3.7.0"
scikit-image = "^0.14.2"
scipy = "^1.2.0"

[tool.poetry.dev-dependencies]
Pygments = "^2.7.2"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}
darglint = "^1.5.5"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
mypy = "^0.790"
pep8-naming = "^0.11.1"
pre-commit = "^2.8.2"
pre-commit-hooks = "^3.3.0"
pytest = "^6.1.2"
reorder-python-imports = "^2.3.6"
safety = "^1.9.0"
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
sphinx-click = "^2.5.0"
sphinx-rtd-theme = "^0.5.0"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}

[tool.poetry.scripts]
BlendingToolKit = "btk.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["btk"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
